# autoseccomp-gen

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  quick_matrix.sh  requirements.txt
autoseccomp/: __init__.py  banner.py  cli.py  entry.py  generator.py  parser.py  runner.py
scripts/: local_net_smoke.sh  prepublish.sh
