[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoseccomp-gen"
version = "0.1.0"
description = "Trace-driven Seccomp profile generator and validator for Docker"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["rich>=13"]
authors = [{ name = "Sebastián Alba", email = "sebasjosue84@estudiantec.cr" }]

[project.urls]
Homepage = "https://github.com/<your-user>/autoseccomp-gen"
Issues = "https://github.com/<your-user>/autoseccomp-gen/issues"

[project.scripts]
autoseccomp-gen = "autoseccomp.entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoseccomp*"]
